--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ajente0.github.io/el2/",
+  "homepage": "https://ajente0.github.io/el2",
   "name": "2",
   "private": false,
   "version": "0.0.0",
